3.08000 2009-11-02
    - return user_id and screen_name from request_access_token (Roberto Etcheverry)

3.07999_01 2009-10-23
    - Added experimental Lists API support

3.07004 2009-10-22
    - Fixed: cached request_token results in a stale authentication/authorization urls

3.07003 2009-10-13
    - Added new API method: report_spam

3.07002 2009-10-05
    - Documented the cursor parameter for friends, followers, friends_ids, and
      followers_ids.
    - Fixed: synthetic since parameter (could fail with multiple API traits defined)
    - Added support for since in YYYY-MM-DD format

3.07001 2009-09-28
    - Added specific versions for DateTime and DateTime::Format::Strptime (closes RT#50069)
    - better deps (Alexandr Ciornii)

3.07000 2009-09-22
    - added 'retweets' REST API method
    - added synthetic 'since' parameter
    - fixed: object inflation for Search API returns (different timestamp format!)

3.06000 2009-09-16
    - support for multipart/from-data posts, used by update_profile_image and
      update_profile_background_image
    - bumped version requirement on namespace::autoclean to avoid deprecation notice

3.05003 2009-09-10
    - URI 1.35 breaks unicode support; require 1.40 (thanks to Dan Boger, @zigdon)
    - Removed deprecated is_authorized from examples in pod (thanks to Nigel Metheringham)

3.05002 2009-08-27
    - Work around perl bug requiring encoded hash keys when client uses "use utf8"

3.05001 2009-08-21
    - Added get_authentication_url for "Sign in with Twitter" authentication flow
    - Updated "source" option documentation (closes RT 48786)

3.05000  2009-08-14
    - Added new API methods: home_timeline, retweet, retweed_{by,of,to}_me
    - Removed JSON::DWIW from supported handlers (lacks support for JSON::Any's uft8 option)

3.04006  2009-07-29
    - Silence Net::OAuth double encoding error (false positives)
    - Fixed: infrequent OAuth signature failures

3.04005  2009-07-28
    - Fix: OAuth / unicode conflict
